deprecated/compiler/tests/run_pass/for.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

task fill(r: region<int>)
  , writes(r)
{
  *(new<int@r>()) = 0;
  *(new<int@r>()) = 1;
  *(new<int@r>()) = 2;
  *(new<int@r>()) = 3;
  *(new<int@r>()) = 4;
  *(new<int@r>()) = 5;
}

task sum(r: region<int>): int
  , reads(r)
{
  var a = 0;
  for x in r {
    a += *x;
  }
  return a;
}

task main()
{
  let r = region<int>(6);
  fill(r);
  assert sum(r) == 15;
}
